trying to fix issue with local env not showing in repo

--- a/client/index.css
+++ b/client/index.css
@@ -50,3 +50,7 @@
   .themeColor{
     background-color: #0D67B5;
   }
+  .hidden{
+    display: none;
+  }
+  
